--- a/hw15/task1.html
+++ b/hw15/task1.html
@@ -5,8 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script>
+      //       let prodPos=a.reduce((prevProd,val,i,arr)=>{
+      // if (val>0)
+      // return prevProd*val
+      // else
+      // return prevProd
+      //       },1)
+
+      //       //--------------------
+      //       let evenCount=a.reduce((prevCount,val,i,arr)=>{
+      // if(val%2===0)
+      // return prevCount+1
+      // else
+      // return prevCount
+      //       },0)
+
+      //       //-----------------------------------
+      //       let max=a.reduce((prevMax,val,i,arr)=>{
+      //         if(val>prevMax)
+      //         return val
+      //         else
+      //         return prevMax
+      //       })
+
+      //       //-----------------------------------------
+      //       let pensionerCount=a.reduce((prevCount,val,i,arr)=>{
+      //         if(val>=65)
+      //         return prevCount+1
+      //         else
+      //         return prevCount
+      //       },0)
+      //       document.write(pensionerCount)
+
+      //-------------------------------
+      // let a=[11,34,5,23,89,3]
+      // let sum=a.reduceRight((prevSum,vel,i,arr)=>){
+      // if(val<arr[i+1])
+      // return prevSum+val
+      // return prevSum
+      // })
+      // document.write(sum)
+
+      //-------------------------------------------------------
+
+      //sort
+
+      a.sort((el1, el2) => {
+        return el1 - el2;
+      });
+      document.write(a);
+    </script>
   </head>
-  <body>
-    Hello1
-  </body>
+  <body></body>
 </html>
